# wust

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  Makefile  TODO.md  VISION.md
crates/plasma/: Cargo.toml  README.md
crates/plasma/src/: lib.rs  modules.rs
crates/plasma/src/polyfills/: mod.rs
crates/plasma/wit/: world.wit
crates/wust/: Cargo.toml  README.md
crates/wust/examples/: bench_ack.rs  bench_fib.rs  fib_jit.s  inspect_ack.rs  inspect_fib.rs  plasma_component.rs  plasma_hello.rs
crates/wust/old_src/linker/: mod.rs
crates/wust/old_src/parse/: parse.rs  types.rs
crates/wust/old_src/runtime/: canonical_abi.rs  error.rs  jit.rs  opcode.rs  store.rs
crates/wust/old_src/runtime/code/: helpers.rs  (+4 more)
crates/wust/src/: lib.rs  trap_handler.rs
crates/wust/src/component/: mod.rs
crates/wust/src/engine/: mod.rs
crates/wust/src/instance/: mod.rs
crates/wust/src/interpreter/: exec.rs  exec_recursive.rs  exec_stack.rs  exec_tailcall.rs  mod.rs
crates/wust/src/jit/: code_buffer.rs  codegen.rs  compiler.rs  emit.rs  ir.rs  lower_aarch64.rs  mod.rs
crates/wust/src/linker/: mod.rs
crates/wust/src/module/: mod.rs
crates/wust/src/parse/: body.rs  func.rs  mod.rs  parse.rs  types.rs
crates/wust/src/runtime/: canonical_abi.rs  component.rs  exec.rs  frame.rs  instruction.rs  jit.rs  mod.rs  module.rs  opcode.rs  store.rs  value.rs
crates/wust/src/stack/: mod.rs
crates/wust/src/store/: mod.rs
crates/wust/src/value/: mod.rs
crates/wust/tests/: basic.rs  component_tests.rs  spec_tests.rs
crates/wust/tests/harness/: HARNESS.md  mod.rs
(+59 files in other folders)
