[package]
name = "wust"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmparser = "0.245"
libc = "0.2"
anyhow = "1"
wat = "1"
bilge = "0.3.0"
clap = { version = "4.5.60", features = ["derive"] }
wust-codegen = { path = "../wust-codegen", features = ["inspect"] }

[dev-dependencies]
wast = "245"
wat = "1"
wasmtime = { version = "41", features = ["pulley"] }

[[example]]
name = "bench_fib"

[[example]]
name = "plasma_hello"
